fix theme editor file upload input text color (was too light)
Fixes: CNVS-32149

test plan:
- as an admin navigate to an account and then select "themes"
  from the sub-nav
- within theme editor select the "upload" tab to test the color
  of the text within the css/js upload fields
- example of new color: http://screencast.com/t/tMoEYlo9F

Reviewed-on: https://gerrit.instructure.com/92242
Tested-by: Jenkins
QA-Review: Benjamin Christian Nelson <bcnelson@instructure.com>
Product-Review: Pam Hiett <phiett@instructure.com>

--- a/app/stylesheets/bundles/theme_editor.scss
+++ b/app/stylesheets/bundles/theme_editor.scss
@@ -256,7 +256,7 @@ $te-footer-height: 72px;
 }
 
 .ThemeEditorFileUpload__fake-input {
-  color: $gray-light;
+  color: $ic-font-color-dark;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
